updating out details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I enrolled in the Coding Boot Camp to be a Web Developer!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am originally from Japan.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playint the piano.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web developer/software engineer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Winter Springs, FL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Because I want to rebuild my career with coding as I'm using my creativity.</p>
     </section>
 
     <footer id="footer">
